[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
worker = "0.0.16"

[profile.release]
lto = true
strip = true
codegen-units = 1
