[package]
name = "nft-storage"
version = "0.1.1"
authors = ["Viki Val <viktorko99@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.18"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
chrono = "0.4.25"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
