[package]
name = "repl"
version = "0.1.0"
authors = ["Viki Val <viktorko99@gmail.com>"]
edition = "2021"
description = "A Cloudflare Worker for Replicate.com"
license = "MIT"
repository = "https://github.com/kodadot/workers"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.3.3"
serde_json = "1.0.122"
serde = { version = "1.0.205", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
